--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "drupal/core-project-message": "^10.0",
         "drupal/core-recommended": "^10.0",
         "drupal/core-vendor-hardening": "^10.0",
+        "drupal/quick_node_clone": "^1.16",
         "drush/drush": "^12.1"
     },
     "conflict": {
